...
    <string name="temp_c">%1$s°C</string>
    <string name="weather_icon_semantic">Weather icon representing weather</string>
    <string name="failed_to_load">Failed to load weather data.</string>
    <string name="failed_city">For city %1$s</string>
    <string name="no_internet_message">No Internet Connection</string>
    <string name="failed_from_no_internet">Failed from no internet connection.</string>
    <string name="loading">Loading…</string>
    <string name="loading_weather_data">Loading weather data</string>
    <string name="press_search_weather">Press Search Weather</string>
    <string name="no_weather_data_available">No weather data available</string>
    <string name="temperature_zoom">Temperature Zoom</string>
    <string name="navigate_to_temperature_zoom_screen">Navigate to temperature zoom screen</string>
    <string name="search_city_weather">Search City Weather</string>
...
