...
            val response = weatherService.getWeather(cityName, apiKey.invoke(context))
            Result.success(response)
        } catch (e: HttpException) {
            var code: Int = e.code()
            when (code) {
                404 -> {
                    Result.failure(WeatherException("No data for city"))
                }

                else -> Result.failure(WeatherException("Service Error"))
            }
        } catch (e: Exception) {
            Result.failure(WeatherException("Unknown Error."))
...
