...
        contentAlignment = Alignment.Center
    ) {
        var semanticString = stringResource(R.string.temp_c_semantics, temp)

        Text(
            modifier = Modifier
                .testTag("temp_zoom_text")
                .semantics {
                    contentDescription = semanticString
                }
                .focusable(), // Makes the element focusable for accessibility
            text = tempString,
            style = MaterialTheme.typography.headlineLarge.copy(fontSize = fontSize.sp)
...
